syntax = "proto3";

package io.github.shiniseong.beyondtest.services.prescription.adapter.inbound.grpc;

option java_multiple_files = true;
option java_package = "io.github.shiniseong.beyondtest.services.prescription.adapter.inbound.grpc";

service PrescriptionCodeService {
  rpc FindAllByUserIdAndStatus (FindPrescriptionCodeByUserIdAndStatusRequest) returns (FindPrescriptionCodeByUserIdAndStatusResponse);
}

message FindPrescriptionCodeByUserIdAndStatusRequest {
  string user_id = 1;
  string status = 2; // CREATED, ACTIVATED, EXPIRED
}

message PrescriptionCodeProto {
  string code = 1;
  string status = 2;
  string created_by = 3;
  string created_at = 4;
  string activated_for = 5;
  string activated_at = 6;
  string expired_at = 7;
}

message FindPrescriptionCodeByUserIdAndStatusResponse {
  repeated PrescriptionCodeProto prescription_codes = 1;
}